# sysx

./: README.md  pyproject.toml  setup.cfg  tasks.py
.github/workflows/: lint.yml  release.yml  test.yml
src/sysx/: __init__.py  __main__.py
tests/: test_placeholder.py
