[tool.poetry]
name = "sysx"
version = "0.0.1"
description = "The command-line interface to System X."
authors = ["Balaji Veeramani <bveeramani@berkeley.edu>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.9b0"
pylint = "^2.11.1"
pytest = "^6.2.5"

[tool.poetry.scripts]
sysx = "sysx:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]

[tool.pylint.BASIC]
good-names = ["c"]
